--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -5,4 +5,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    color:white;
+    font-weight: bold;
   }
